package com.qiding.design;

public interface Observer {
    void observe();
}
