@startuml

     interface Observer{
          + observe():void
     }

     class ConcreteObserver1{
       - name:String
       + observe():void
     }

     class ConcreteObserver2{
            - name:String
            + observe():void
     }


     abstract  class  Subject{
         # observers:List<Observer>
         + addObserver(Observer observer):void
         + removeObserver(Observer observer):void
         + notifyObserver():void
     }

     class ConcreteSubject{
         + notifyObserver():void
     }

    Subject o- Observer
    Subject <|-- ConcreteSubject
    Observer<|-- ConcreteObserver1
    Observer<|-- ConcreteObserver2

@enduml